samples/_failures_safe/1761377289_ebab92_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0b66d620.c: In function ‘main’:
./samples/SAFE/__tmp_0b66d620.c:149:5: error: ‘apply_’ undeclared (first use in this function)
  149 |     apply_
      |     ^~~~~~
./samples/SAFE/__tmp_0b66d620.c:149:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_0b66d620.c:149:11: error: expected ‘;’ at end of input
  149 |     apply_
      |           ^
      |           ;
./samples/SAFE/__tmp_0b66d620.c:149:5: error: expected declaration or statement at end of input
  149 |     apply_
      |     ^~~~~~
